--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-paper": "^4.10.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-svg": "12.1.1",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
